# zloxer

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: clippy-fmt-test.yml
src/: cli.rs  error.rs  interpreter.rs  lib.rs  loxer.rs  main.rs  parser.rs  scanner.rs  utils.rs
src/environment/: mod.rs
src/error/: interpreter.rs  mod.rs  parser.rs  scanner.rs
src/interpreter/: callable.rs  class.rs  instance.rs  mod.rs  value.rs
src/parser/: expression.rs  mod.rs
src/scanner/: mod.rs  token.rs
src/statement/: mod.rs
tests/: dequeue.rs  hello.lx  lox.rs  super_test.lox  test.lox
